# dockyy

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  Makefile  TODO.md  agents.md  deploy.sh  dockyy.service  ecosystem.config.js  readme.md  run.sh
Users/rifkyputra/Projects/dockyy/dashboard/: package.json
backend/: .env.example  .gitignore  alembic.ini  migrate.py  pyproject.toml
backend/app/: __init__.py  __main__.py  models.py
backend/app/routes/: auth.py  containers.py  repositories.py  tunnels.py
backend/app/services/: compose_service.py  git_service.py  repository_service.py
backend/migrations/: README.md  env.py
backend/migrations/versions/: 14fe94d585ab_add_filesystem_path_to_repositories.py  f499bc46279b_add_ssh_password_to_repositories.py
crates/server/: Cargo.toml
crates/server/src/: main.rs
crates/server/src/auth/: mod.rs
crates/server/src/db/: mod.rs  models.rs
crates/server/src/routes/: auth.rs  containers.rs  deployments.rs  health.rs  mod.rs  proxy.rs  repositories.rs  static_files.rs  webhooks.rs
crates/server/src/services/: docker.rs  mod.rs  monitor.rs  traefik.rs  worker.rs
dashboard/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
dashboard/src/: App.vue  api.ts  main.ts  style.css
dashboard/src/components/: LogModal.vue
dashboard/src/views/: ContainersView.vue  DeploymentsView.vue  HealthView.vue  LoginView.vue  ProxyView.vue  RepositoriesView.vue  RepositoryDetailView.vue  SettingsView.vue
frontend/: index.html  package.json  tsconfig.json  vite.config.js  vite.config.ts
frontend/src/: App.css  App.jsx  App.tsx  main.tsx
frontend/src/components/: ContainersTable.tsx  DockerComposeList.tsx  GitControls.tsx  Navigation.tsx  ReadmeSection.tsx  RepositoriesTable.tsx  RepositoryDetail.tsx
frontend/src/hooks/: useApi.ts
frontend/src/lib/: api.ts
frontend/src/pages/: CloudflareTunnelPage.tsx  ContainersPage.tsx  LoginPage.tsx  RepositoriesPage.tsx
frontend/src/types/: index.ts
