[package]
name = "dockyy"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "dockyy"
path = "src/main.rs"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Docker
bollard = "0.18"

# Auth / JWT
jsonwebtoken = "9"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
dotenvy = "0.15"
bcrypt = "0.17"

# Async stream utilities
futures-util = "0.3"

# Embed static files
rust-embed = { version = "8", features = ["mime-guess"] }
mime_guess = "2"

# System metrics
sysinfo = "0.33"

# YAML parsing (for docker-compose env var import)
serde_yaml = "0.9"
